rust/crates/astra-cli/src/tui/mention_menu/snapshots/astra__tui__mention_menu__popup__tests__mention_popup_default_80.snap
---
source: crates/astra-cli/src/tui/mention_menu/popup.rs
assertion_line: 189
expression: "render_menu(&menu, 80, 4)"
---
▌ ▸ src
  ▸ tests
    Cargo.toml
    README.md
