rust/crates/astra-cli/src/tui/mention_menu/snapshots/astra__tui__mention_menu__popup__tests__mention_popup_file_selected_80.snap
---
source: crates/astra-cli/src/tui/mention_menu/popup.rs
expression: "render_menu(&menu, 80, 4)"
---
  ▸ src
  ▸ tests
▌   Cargo.toml
    README.md
