rust/crates/astra-cli/src/tui/mention_menu/snapshots/astra__tui__mention_menu__popup__tests__mention_popup_narrow_20.snap
---
source: crates/astra-cli/src/tui/mention_menu/popup.rs
expression: "render_menu(&menu, 20, 2)"
---
▌   a_very_long_fil…
